--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -164,7 +164,7 @@
 	<div class="container">
 		<div class="four columns">
 		    <div class="footer-widget widget_text">
-		        <div class="textwidget"><img src="{% static "images/logo/logo-footer.png" %}" alt="">
+		        <div class="textwidget"><img src="{% static "images/logo/logo-footer.png" %}" alt="logo-footer" />
 		            <p class="margin-top-15">
 		            	Сайт для творческих людей.
 		            </p>
