--- a/theme/templates/order/order_detail.html
+++ b/theme/templates/order/order_detail.html
@@ -21,6 +21,9 @@
 <li>{{ order.title|title }}</li>
 {% endblock %}
 
+{% block leftsidebar %}
+{% endblock %}
+
 {% block main %}
 {% if order.images.first %}
 	<div class="six columns">
