--- a/theme/templates/accounts/account_profile.html
+++ b/theme/templates/accounts/account_profile.html
@@ -18,8 +18,8 @@
 <div class="five columns">
     <figure class="post-img">
     {% if profile_user.profile.image %}
-        <img src="{{ MEDIA_URL }}{% thumbnail profile_user.profile.image 420 300 %}" alt="Фото профиля"> {% else %}
-        <img src="{{ STATIC_URL }}{% thumbnail 'images/no-order-image.jpg' 420 300 %}" alt="no-image"> {% endif %}
+        <img src="{{ MEDIA_URL }}{% thumbnail profile_user.profile.image 420 300 %}" alt="Фото профиля" /> {% else %}
+        <img src="{{ STATIC_URL }}{% thumbnail 'images/no-order-image.jpg' 420 300 %}" alt="no-image" /> {% endif %}
     </figure>
     <section class="the-team-content">
     <ul class="profile-user-list margin-bottom-15">
