--- a/theme/templates/blog/blog_post_list.html
+++ b/theme/templates/blog/blog_post_list.html
@@ -74,7 +74,7 @@
 	    <div class="widget-thumb">
 				<a href="{{ recent_post.get_absolute_url }}">
 				{% if recent_post.featured_image %}
-					<img src="{{ MEDIA_URL }}{% thumbnail recent_post.featured_image 74 74 %}"/>
+					<img src="{{ MEDIA_URL }}{% thumbnail recent_post.featured_image 74 74 %}" alt="{{ recent_post.title }}"/>
 				{% endif %}
 				</a>
 		</div>  
@@ -124,7 +124,7 @@
 			{% block blog_post_list_post_featured_image %}
 			<figure class="from-the-blog-image">
 				<a href="{{ blog_post.get_absolute_url }}">
-					<img class="img-thumbnail pull-left" src="{{ MEDIA_URL }}{% thumbnail blog_post.featured_image 400 300 %}" alt="" />
+					<img class="img-thumbnail pull-left" src="{{ MEDIA_URL }}{% thumbnail blog_post.featured_image 400 300 %}" alt="{{ blog_post.title }}" />
 				</a>
 				<div class="hover-icon"></div>
 			</figure>
