img tag fix, different font-size on slider text

--- a/theme/static/css/custom.css
+++ b/theme/static/css/custom.css
@@ -111,7 +111,8 @@
 }
 
 .bss-slides figcaption h5,
-.bss-slides figcaption h6 {
+.bss-slides figcaption h6,
+.bss-slides figcaption p {
     font-size: 22px;
 }
 
