fix html5 validate

--- a/theme/static/css/green.css
+++ b/theme/static/css/green.css
@@ -68,8 +68,8 @@ a,
 .happy-clients-author,
 #categories li li a.active span,
 #categories li li a.active,
-#additional-menu ul li a:hover,
-#additional-menu ul li a:hover span,
+.additional-menu ul li a:hover,
+.additional-menu ul li a:hover span,
 .mega a:hover,
 .mega ul li p a,
 #not-found i,
