--- a/theme/templates/accounts/shop_profile.html
+++ b/theme/templates/accounts/shop_profile.html
@@ -115,7 +115,7 @@
                     <a href="{{ product.get_absolute_url }}">
                         {% if images %}
                         <img src="{{ MEDIA_URL }}{% thumbnail images.0 250 330 %}" alt="{{ images.0 }}"/> 
-                            {% if product.image.count != 1 %}
+                            {% if product.images.count != 1 %}
                             <div class="cover">
                                     <img src="{{ MEDIA_URL }}{% thumbnail images.1 300 380 %}" alt="{{ images.1 }}" />
                             </div>
@@ -127,9 +127,8 @@
                     <a href="{{ product.get_absolute_url }}" class="product-button"><i class="fa fa-share"></i>Подробнее</a>
                     </div>
                     {% endwith %}
-                    <a href="{{ product.get_absolute_url }}">
                         <section>
-                            <h5>{{ product.title|title|truncatechars:34 }}</h5>
+                            <a href="{{ product.get_absolute_url }}"><h5>{{ product.title|title|truncatechars:34 }}</h5></a>
                             <a href="{{ product.user.shop.get_absolute_url }}" class="shopname">{{ product.user.shop.shopname }}</a>
                             <!--<span class="product-category">
                             </span>-->
@@ -139,7 +138,6 @@
                             <span class="product-price">{{ product.price|rub_currency }}</span>
                             {% endif %}
                         </section>
-                    </a>
                 </figure>
             </div>
             {% endfor %}
