--- a/theme/templates/pages/menus/dropdown.html
+++ b/theme/templates/pages/menus/dropdown.html
@@ -4,15 +4,11 @@
 
 {% if branch_level == 0 %}
 <a href="javascript:void(0);" class="menu-trigger"><i class="fa fa-bars"></i> Меню</a>
-<!--<div class="hide-top-search">
-{# {% search_form "all" %} #}
-</div>-->
-<!--<nav id="navigation">-->
 <ul class="menu responsive">
     {% for page in page_branch %}
     {% if not has_home and page.is_primary and forloop.first %}
     <li>
-        <a class="{% if on_home %}current{% endif %} homepage" id="{% if on_home %}current{% endif %}" href="{% url "true_index" %}">{% trans "Home" %}</a>
+        <a class="{% if on_home %}current{% endif %} homepage" href="{% url "true_index" %}">{% trans "Home" %}</a>
     </li>
     {% endif %}
     {% if page.in_menu %}
@@ -32,10 +28,7 @@
     </li>
     {% endif %}
     {% endfor %}
-    
-    <!--<li style="float: right; margin: 5px 0px;">{# {% search_form "all" %} #}</li>-->
 </ul>
-</nav>
 
 {% elif branch_level == 1 %}
 <ul class="cd-dropdown-content">
