--- a/theme/static/css/mega_dropdown.css
+++ b/theme/static/css/mega_dropdown.css
@@ -726,21 +726,25 @@
     }
     .cd-dropdown-content .cd-secondary-dropdown>li.has-children>a {
         background: #f0f0f0;
-        color: #707070;
-        padding-left: 5px;
+        /*color: #707070;*/
+        /*padding-left: 5px;*/
         /*font-weight: 600;*/
         /*padding: 0px 6px;*/
         /*margin-left: -6px;*/
-        font-size: 15px;
+        /*font-size: 15px;*/
     }
     .cd-dropdown-content .cd-secondary-dropdown>li.has-children>a:hover {
     	color: #3acf87;
+    }
+    .cd-dropdown-content .cd-secondary-dropdown>li.empty-children>a:hover {
+    	background-color: #f0f0f0;
     }
     .cd-dropdown-content .cd-secondary-dropdown>li.has-children>a,
     .cd-dropdown-content .cd-secondary-dropdown>li.empty-children>a {
         color: #3f8654;
         font-size: 15px;
         pointer-events: auto;
+        padding-left: 5px;
     }
     .cd-dropdown-content .cd-secondary-dropdown>li>a::after,
     .cd-dropdown-content .cd-secondary-dropdown>li>a::before {
@@ -765,8 +769,9 @@
         border-bottom: 1px solid #ebebeb;
     }
     .cd-dropdown-content .cd-secondary-dropdown>li.empty-children {
-        padding: 10px 0 0 20px;
-        /*height: 40px;*/
+        padding: 10px 20px 0px 20px;
+        width: 50%;
+        float: left;
     }
     .cd-dropdown-content .cd-secondary-dropdown>li>a.screen-hide {
         display: none;
