--- a/theme/static/css/mega_dropdown.css
+++ b/theme/static/css/mega_dropdown.css
@@ -605,7 +605,7 @@
         -o-transform: translateX(0);
         transform: translateX(0);
         left: 100%;
-        height: 100%;
+        height: auto;
         background-color: #ffffff;
         box-shadow: 0 2px 14px rgba(0, 0, 0, 0.1);
     }
