--- a/theme/static/css/mega_dropdown.css
+++ b/theme/static/css/mega_dropdown.css
@@ -138,7 +138,7 @@
 .cd-dropdown-content a,
 .cd-dropdown-content ul a,
 .cd-dropdown-content .cd-divider {
-    padding: 0 20px;
+    padding: 0 0 0 20px;
 }
 
 .cd-dropdown {
